@@ -8,6 +8,7 @@ Version 0.3.9+
 	* Add select_best_kmeans
 	* Added defaultlearner as a better name than defaultclassifier
 	* Add `measures.curves.precision_recall`
+	* Add `unsupervised.parzen.parzen`
 
 Version 0.3.9 2011-03-15 by luispedro
 	* Improve speed of k-nearest neighbour (10x on scikits-learn benchmark)
